// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for alignMarker: end, background: frosted, isCompact: true, isOpen: true, isSticky: true, hasSummaryBefore: false, hasSummaryAfter: false, size: small 1`] = `
"@keyframes overflow-hidden {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}
  :host {
    display: block;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot[name="summary-before"], slot[name="summary"], slot[name="summary-after"] {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: calc(11.2px * (0.64285714 - 0.64285714) + 4px);
  }
  slot[name="summary-before"] {
    grid-area: 1/1;
    z-index: 2;
  }
  slot[name="summary"] {
    grid-area: 1/1;
  }
  slot[name="summary-after"] {
    grid-area: 1/2;
    z-index: 2;
  }
  slot:not([name]) {
    display: block;
    overflow: hidden;
  }
  details[open] slot:not([name]) {
    overflow: visible;
    animation: overflow-hidden var(--p-transition-duration,.4s);
  }
  h1,h2,h3,h4,h5,h6 {
    all: unset;
    grid-area: 1/1;
    font: inherit;
    font-weight: var(--p-font-weight-semibold);
    font-size: var(--p-typescale-sm);
  }
  details {
    all: unset;
    font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
    color: var(--p-color-primary);
    display: grid;
    grid-template: repeat(2, auto) / minmax(0, 1fr) auto;
    column-gap: calc(11.2px * (0.64285714 - 0.64285714) + 4px);
    align-items: center;
    padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    background: var(--p-color-frosted);
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  details::details-content {
    display: contents !important;
    content-visibility: visible !important;
  }
  details > div {
    grid-area: 2/1/auto/-1;
    z-index: 0;
    display: grid;
    opacity: 0;
    margin-top: 0px;
    grid-template-rows: 0fr;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, .4s), grid-template-rows var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), margin-top var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  details[open] > div {
    opacity: 1;
    margin-top: calc(28px * (0.64285714 - 0.64285714) + 6px);
    grid-template-rows: 1fr;
    visibility: inherit;
    transition: visibility 0s linear 0s, grid-template-rows var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), margin-top var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  summary {
    all: unset;
    grid-area: 1/1/auto/-1;
    z-index: 1;
    display: grid;
    grid-template-columns: subgrid;
    align-items: center;
    cursor: pointer;
    padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    margin: calc(-1 * var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px))) calc(-1 * var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px)));
  }
  summary:focus-visible::before {
    outline: 2px solid var(--p-color-focus);
    outline-offset: 2px;
  }
  summary::before {
    grid-area: 1/2;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
    border-radius: var(--p-radius-full);
    background: transparent;
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  summary::after {
    grid-area: 1/2;
    place-self: center;
    content: "";
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    background: var(--p-color-primary);
    transform: rotate3d(0);
    transition: transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  details[open] summary::after {
    transform: rotate3d(0,0,1,180deg);
  }
@media (forced-colors: active) {
    details {
      outline: 1px solid CanvasText;
      outline-offset: -1px;
      padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    }
    summary::after {
      background-color: LinkText;
    }
    summary::before {
      background-color: LinkText;
    }
    summary:focus-visible::before {
      outline-color: Highlight;
    }
}

@media(hover:hover) {
    summary:hover::before {
      background: var(--p-color-frosted);
    }
}
"
`;

exports[`getComponentCss() > should return correct css for alignMarker: start, background: canvas, isCompact: false, isOpen: false, isSticky: false, hasSummaryBefore: false, hasSummaryAfter: false, size: small 1`] = `
"@keyframes overflow-hidden {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}
  :host {
    display: block;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot[name="summary-before"], slot[name="summary"], slot[name="summary-after"] {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: calc(11.2px * (1 - 0.64285714) + 4px);
  }
  slot[name="summary-before"] {
    grid-area: 1/2;
    z-index: 2;
  }
  slot[name="summary"] {
    grid-area: 1/2;
  }
  slot[name="summary-after"] {
    grid-area: 1/3;
    z-index: 2;
  }
  slot:not([name]) {
    display: block;
    overflow: hidden;
  }
  details[open] slot:not([name]) {
    overflow: visible;
    animation: overflow-hidden var(--p-transition-duration,.25s);
  }
  h1,h2,h3,h4,h5,h6 {
    all: unset;
    grid-area: 1/2;
    font: inherit;
    font-weight: var(--p-font-weight-semibold);
    font-size: var(--p-typescale-sm);
  }
  details {
    all: unset;
    font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
    color: var(--p-color-primary);
    display: grid;
    grid-template: repeat(2, auto) / auto minmax(0, 1fr);
    column-gap: calc(11.2px * (1 - 0.64285714) + 4px);
    align-items: center;
    padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    background: var(--p-color-canvas);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  details::details-content {
    display: contents !important;
    content-visibility: visible !important;
  }
  details > div {
    grid-area: 2/1/auto/-1;
    z-index: 0;
    display: grid;
    opacity: 0;
    margin-top: 0px;
    grid-template-rows: 0fr;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, .25s), grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), margin-top var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  details[open] > div {
    opacity: 1;
    margin-top: calc(28px * (1 - 0.64285714) + 6px);
    grid-template-rows: 1fr;
    visibility: inherit;
    transition: visibility 0s linear 0s, grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), margin-top var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  summary {
    all: unset;
    grid-area: 1/1/auto/-1;
    z-index: 1;
    display: grid;
    grid-template-columns: subgrid;
    align-items: center;
    cursor: pointer;
    padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    margin: calc(-1 * var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px))) calc(-1 * var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px)));
  }
  summary:focus-visible::before {
    outline: 2px solid var(--p-color-focus);
    outline-offset: 2px;
  }
  summary::before {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
    border-radius: var(--p-radius-full);
    background: transparent;
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  summary::after {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    background: var(--p-color-primary);
    transform: rotate3d(0);
    transition: transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  details[open] summary::after {
    transform: rotate3d(0,0,1,180deg);
  }
@media (forced-colors: active) {
    details {
      outline: 1px solid CanvasText;
      outline-offset: -1px;
      padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    }
    summary::after {
      background-color: LinkText;
    }
    summary::before {
      background-color: LinkText;
    }
    summary:focus-visible::before {
      outline-color: Highlight;
    }
}

@media(hover:hover) {
    summary:hover::before {
      background: var(--p-color-frosted);
    }
}
"
`;

exports[`getComponentCss() > should return correct css for alignMarker: start, background: canvas, isCompact: false, isOpen: false, isSticky: true, hasSummaryBefore: false, hasSummaryAfter: false, size: small 1`] = `
"@keyframes overflow-hidden {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}
  :host {
    display: block;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot[name="summary-before"], slot[name="summary"], slot[name="summary-after"] {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: calc(11.2px * (1 - 0.64285714) + 4px);
  }
  slot[name="summary-before"] {
    grid-area: 1/2;
    z-index: 2;
  }
  slot[name="summary"] {
    grid-area: 1/2;
  }
  slot[name="summary-after"] {
    grid-area: 1/3;
    z-index: 2;
  }
  slot:not([name]) {
    display: block;
    overflow: hidden;
  }
  details[open] slot:not([name]) {
    overflow: visible;
    animation: overflow-hidden var(--p-transition-duration,.25s);
  }
  h1,h2,h3,h4,h5,h6 {
    all: unset;
    grid-area: 1/2;
    font: inherit;
    font-weight: var(--p-font-weight-semibold);
    font-size: var(--p-typescale-sm);
  }
  details {
    all: unset;
    font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
    color: var(--p-color-primary);
    display: grid;
    grid-template: repeat(2, auto) / auto minmax(0, 1fr);
    column-gap: calc(11.2px * (1 - 0.64285714) + 4px);
    align-items: center;
    padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    background: var(--p-color-canvas);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  details::details-content {
    display: contents !important;
    content-visibility: visible !important;
  }
  details > div {
    grid-area: 2/1/auto/-1;
    z-index: 0;
    display: grid;
    opacity: 0;
    margin-top: 0px;
    grid-template-rows: 0fr;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, .25s), grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), margin-top var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  details[open] > div {
    opacity: 1;
    margin-top: calc(28px * (1 - 0.64285714) + 6px);
    grid-template-rows: 1fr;
    visibility: inherit;
    transition: visibility 0s linear 0s, grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), margin-top var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  summary {
    all: unset;
    grid-area: 1/1/auto/-1;
    z-index: 1;
    display: grid;
    grid-template-columns: subgrid;
    align-items: center;
    cursor: pointer;
    padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    margin: calc(-1 * var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px))) calc(-1 * var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px)));
    position: sticky;
    top: var(--p-accordion-summary-top, var(--p-accordion-position-sticky-top, 0px));
    background: linear-gradient(180deg,var(--p-color-canvas) 0%,var(--p-color-canvas) 90%,transparent 100%);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  summary:focus-visible::before {
    outline: 2px solid var(--p-color-focus);
    outline-offset: 2px;
  }
  summary::before {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
    border-radius: var(--p-radius-full);
    background: transparent;
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  summary::after {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    background: var(--p-color-primary);
    transform: rotate3d(0);
    transition: transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  details[open] summary::after {
    transform: rotate3d(0,0,1,180deg);
  }
@media (forced-colors: active) {
    details {
      outline: 1px solid CanvasText;
      outline-offset: -1px;
      padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    }
    summary::after {
      background-color: LinkText;
    }
    summary::before {
      background-color: LinkText;
    }
    summary:focus-visible::before {
      outline-color: Highlight;
    }
}

@media(hover:hover) {
    summary:hover::before {
      background: var(--p-color-frosted);
    }
}
"
`;

exports[`getComponentCss() > should return correct css for alignMarker: start, background: canvas, isCompact: false, isOpen: true, isSticky: true, hasSummaryBefore: false, hasSummaryAfter: false, size: small 1`] = `
"@keyframes overflow-hidden {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}
  :host {
    display: block;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot[name="summary-before"], slot[name="summary"], slot[name="summary-after"] {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: calc(11.2px * (1 - 0.64285714) + 4px);
  }
  slot[name="summary-before"] {
    grid-area: 1/2;
    z-index: 2;
  }
  slot[name="summary"] {
    grid-area: 1/2;
  }
  slot[name="summary-after"] {
    grid-area: 1/3;
    z-index: 2;
  }
  slot:not([name]) {
    display: block;
    overflow: hidden;
  }
  details[open] slot:not([name]) {
    overflow: visible;
    animation: overflow-hidden var(--p-transition-duration,.4s);
  }
  h1,h2,h3,h4,h5,h6 {
    all: unset;
    grid-area: 1/2;
    font: inherit;
    font-weight: var(--p-font-weight-semibold);
    font-size: var(--p-typescale-sm);
  }
  details {
    all: unset;
    font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
    color: var(--p-color-primary);
    display: grid;
    grid-template: repeat(2, auto) / auto minmax(0, 1fr);
    column-gap: calc(11.2px * (1 - 0.64285714) + 4px);
    align-items: center;
    padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    background: var(--p-color-canvas);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  details::details-content {
    display: contents !important;
    content-visibility: visible !important;
  }
  details > div {
    grid-area: 2/1/auto/-1;
    z-index: 0;
    display: grid;
    opacity: 0;
    margin-top: 0px;
    grid-template-rows: 0fr;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, .4s), grid-template-rows var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), margin-top var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  details[open] > div {
    opacity: 1;
    margin-top: calc(28px * (1 - 0.64285714) + 6px);
    grid-template-rows: 1fr;
    visibility: inherit;
    transition: visibility 0s linear 0s, grid-template-rows var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), margin-top var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  summary {
    all: unset;
    grid-area: 1/1/auto/-1;
    z-index: 1;
    display: grid;
    grid-template-columns: subgrid;
    align-items: center;
    cursor: pointer;
    padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    margin: calc(-1 * var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px))) calc(-1 * var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px)));
    position: sticky;
    top: var(--p-accordion-summary-top, var(--p-accordion-position-sticky-top, 0px));
    background: linear-gradient(180deg,var(--p-color-canvas) 0%,var(--p-color-canvas) 90%,transparent 100%);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  summary:focus-visible::before {
    outline: 2px solid var(--p-color-focus);
    outline-offset: 2px;
  }
  summary::before {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
    border-radius: var(--p-radius-full);
    background: transparent;
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  summary::after {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    background: var(--p-color-primary);
    transform: rotate3d(0);
    transition: transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  details[open] summary::after {
    transform: rotate3d(0,0,1,180deg);
  }
@media (forced-colors: active) {
    details {
      outline: 1px solid CanvasText;
      outline-offset: -1px;
      padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    }
    summary::after {
      background-color: LinkText;
    }
    summary::before {
      background-color: LinkText;
    }
    summary:focus-visible::before {
      outline-color: Highlight;
    }
}

@media(hover:hover) {
    summary:hover::before {
      background: var(--p-color-frosted);
    }
}
"
`;

exports[`getComponentCss() > should return correct css for alignMarker: start, background: frosted, isCompact: false, isOpen: false, isSticky: false, hasSummaryBefore: false, hasSummaryAfter: false, size: small 1`] = `
"@keyframes overflow-hidden {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}
  :host {
    display: block;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot[name="summary-before"], slot[name="summary"], slot[name="summary-after"] {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: calc(11.2px * (1 - 0.64285714) + 4px);
  }
  slot[name="summary-before"] {
    grid-area: 1/2;
    z-index: 2;
  }
  slot[name="summary"] {
    grid-area: 1/2;
  }
  slot[name="summary-after"] {
    grid-area: 1/3;
    z-index: 2;
  }
  slot:not([name]) {
    display: block;
    overflow: hidden;
  }
  details[open] slot:not([name]) {
    overflow: visible;
    animation: overflow-hidden var(--p-transition-duration,.25s);
  }
  h1,h2,h3,h4,h5,h6 {
    all: unset;
    grid-area: 1/2;
    font: inherit;
    font-weight: var(--p-font-weight-semibold);
    font-size: var(--p-typescale-sm);
  }
  details {
    all: unset;
    font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
    color: var(--p-color-primary);
    display: grid;
    grid-template: repeat(2, auto) / auto minmax(0, 1fr);
    column-gap: calc(11.2px * (1 - 0.64285714) + 4px);
    align-items: center;
    padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    background: var(--p-color-frosted);
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  details::details-content {
    display: contents !important;
    content-visibility: visible !important;
  }
  details > div {
    grid-area: 2/1/auto/-1;
    z-index: 0;
    display: grid;
    opacity: 0;
    margin-top: 0px;
    grid-template-rows: 0fr;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, .25s), grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), margin-top var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  details[open] > div {
    opacity: 1;
    margin-top: calc(28px * (1 - 0.64285714) + 6px);
    grid-template-rows: 1fr;
    visibility: inherit;
    transition: visibility 0s linear 0s, grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), margin-top var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  summary {
    all: unset;
    grid-area: 1/1/auto/-1;
    z-index: 1;
    display: grid;
    grid-template-columns: subgrid;
    align-items: center;
    cursor: pointer;
    padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    margin: calc(-1 * var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px))) calc(-1 * var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px)));
  }
  summary:focus-visible::before {
    outline: 2px solid var(--p-color-focus);
    outline-offset: 2px;
  }
  summary::before {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
    border-radius: var(--p-radius-full);
    background: transparent;
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  summary::after {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    background: var(--p-color-primary);
    transform: rotate3d(0);
    transition: transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  details[open] summary::after {
    transform: rotate3d(0,0,1,180deg);
  }
@media (forced-colors: active) {
    details {
      outline: 1px solid CanvasText;
      outline-offset: -1px;
      padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    }
    summary::after {
      background-color: LinkText;
    }
    summary::before {
      background-color: LinkText;
    }
    summary:focus-visible::before {
      outline-color: Highlight;
    }
}

@media(hover:hover) {
    summary:hover::before {
      background: var(--p-color-frosted);
    }
}
"
`;

exports[`getComponentCss() > should return correct css for alignMarker: start, background: frosted, isCompact: false, isOpen: false, isSticky: false, hasSummaryBefore: false, hasSummaryAfter: false, size: small 2`] = `
"@keyframes overflow-hidden {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}
  :host {
    display: block;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot[name="summary-before"], slot[name="summary"], slot[name="summary-after"] {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: calc(11.2px * (1 - 0.64285714) + 4px);
  }
  slot[name="summary-before"] {
    grid-area: 1/2;
    z-index: 2;
  }
  slot[name="summary"] {
    grid-area: 1/2;
  }
  slot[name="summary-after"] {
    grid-area: 1/3;
    z-index: 2;
  }
  slot:not([name]) {
    display: block;
    overflow: hidden;
  }
  details[open] slot:not([name]) {
    overflow: visible;
    animation: overflow-hidden var(--p-transition-duration,.25s);
  }
  h1,h2,h3,h4,h5,h6 {
    all: unset;
    grid-area: 1/2;
    font: inherit;
    font-weight: var(--p-font-weight-semibold);
    font-size: var(--p-typescale-sm);
  }
  details {
    all: unset;
    font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
    color: var(--p-color-primary);
    display: grid;
    grid-template: repeat(2, auto) / auto minmax(0, 1fr);
    column-gap: calc(11.2px * (1 - 0.64285714) + 4px);
    align-items: center;
    padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    background: var(--p-color-frosted);
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  details::details-content {
    display: contents !important;
    content-visibility: visible !important;
  }
  details > div {
    grid-area: 2/1/auto/-1;
    z-index: 0;
    display: grid;
    opacity: 0;
    margin-top: 0px;
    grid-template-rows: 0fr;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, .25s), grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), margin-top var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  details[open] > div {
    opacity: 1;
    margin-top: calc(28px * (1 - 0.64285714) + 6px);
    grid-template-rows: 1fr;
    visibility: inherit;
    transition: visibility 0s linear 0s, grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), margin-top var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  summary {
    all: unset;
    grid-area: 1/1/auto/-1;
    z-index: 1;
    display: grid;
    grid-template-columns: subgrid;
    align-items: center;
    cursor: pointer;
    padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    margin: calc(-1 * var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px))) calc(-1 * var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px)));
  }
  summary:focus-visible::before {
    outline: 2px solid var(--p-color-focus);
    outline-offset: 2px;
  }
  summary::before {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
    border-radius: var(--p-radius-full);
    background: transparent;
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  summary::after {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    background: var(--p-color-primary);
    transform: rotate3d(0);
    transition: transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  details[open] summary::after {
    transform: rotate3d(0,0,1,180deg);
  }
@media (forced-colors: active) {
    details {
      outline: 1px solid CanvasText;
      outline-offset: -1px;
      padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    }
    summary::after {
      background-color: LinkText;
    }
    summary::before {
      background-color: LinkText;
    }
    summary:focus-visible::before {
      outline-color: Highlight;
    }
}

@media(hover:hover) {
    summary:hover::before {
      background: var(--p-color-frosted);
    }
}
"
`;

exports[`getComponentCss() > should return correct css for alignMarker: start, background: frosted, isCompact: true, isOpen: false, isSticky: false, hasSummaryBefore: false, hasSummaryAfter: false, size: medium 1`] = `
"@keyframes overflow-hidden {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}
  :host {
    display: block;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot[name="summary-before"], slot[name="summary"], slot[name="summary-after"] {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: calc(11.2px * (0.64285714 - 0.64285714) + 4px);
  }
  slot[name="summary-before"] {
    grid-area: 1/2;
    z-index: 2;
  }
  slot[name="summary"] {
    grid-area: 1/2;
  }
  slot[name="summary-after"] {
    grid-area: 1/3;
    z-index: 2;
  }
  slot:not([name]) {
    display: block;
    overflow: hidden;
  }
  details[open] slot:not([name]) {
    overflow: visible;
    animation: overflow-hidden var(--p-transition-duration,.25s);
  }
  h1,h2,h3,h4,h5,h6 {
    all: unset;
    grid-area: 1/2;
    font: inherit;
    font-weight: var(--p-font-weight-semibold);
    font-size: var(--p-typescale-md);
  }
  details {
    all: unset;
    font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
    color: var(--p-color-primary);
    display: grid;
    grid-template: repeat(2, auto) / auto minmax(0, 1fr);
    column-gap: calc(11.2px * (0.64285714 - 0.64285714) + 4px);
    align-items: center;
    padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    background: var(--p-color-frosted);
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  details::details-content {
    display: contents !important;
    content-visibility: visible !important;
  }
  details > div {
    grid-area: 2/1/auto/-1;
    z-index: 0;
    display: grid;
    opacity: 0;
    margin-top: 0px;
    grid-template-rows: 0fr;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, .25s), grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), margin-top var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  details[open] > div {
    opacity: 1;
    margin-top: calc(28px * (0.64285714 - 0.64285714) + 6px);
    grid-template-rows: 1fr;
    visibility: inherit;
    transition: visibility 0s linear 0s, grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), margin-top var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  summary {
    all: unset;
    grid-area: 1/1/auto/-1;
    z-index: 1;
    display: grid;
    grid-template-columns: subgrid;
    align-items: center;
    cursor: pointer;
    padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    margin: calc(-1 * var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px))) calc(-1 * var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px)));
  }
  summary:focus-visible::before {
    outline: 2px solid var(--p-color-focus);
    outline-offset: 2px;
  }
  summary::before {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
    border-radius: var(--p-radius-full);
    background: transparent;
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  summary::after {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    background: var(--p-color-primary);
    transform: rotate3d(0);
    transition: transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  details[open] summary::after {
    transform: rotate3d(0,0,1,180deg);
  }
@media (forced-colors: active) {
    details {
      outline: 1px solid CanvasText;
      outline-offset: -1px;
      padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    }
    summary::after {
      background-color: LinkText;
    }
    summary::before {
      background-color: LinkText;
    }
    summary:focus-visible::before {
      outline-color: Highlight;
    }
}

@media(hover:hover) {
    summary:hover::before {
      background: var(--p-color-frosted);
    }
}
"
`;

exports[`getComponentCss() > should return correct css for alignMarker: start, background: frosted, isCompact: true, isOpen: true, isSticky: false, hasSummaryBefore: false, hasSummaryAfter: false, size: small 1`] = `
"@keyframes overflow-hidden {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}
  :host {
    display: block;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot[name="summary-before"], slot[name="summary"], slot[name="summary-after"] {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: calc(11.2px * (0.64285714 - 0.64285714) + 4px);
  }
  slot[name="summary-before"] {
    grid-area: 1/2;
    z-index: 2;
  }
  slot[name="summary"] {
    grid-area: 1/2;
  }
  slot[name="summary-after"] {
    grid-area: 1/3;
    z-index: 2;
  }
  slot:not([name]) {
    display: block;
    overflow: hidden;
  }
  details[open] slot:not([name]) {
    overflow: visible;
    animation: overflow-hidden var(--p-transition-duration,.4s);
  }
  h1,h2,h3,h4,h5,h6 {
    all: unset;
    grid-area: 1/2;
    font: inherit;
    font-weight: var(--p-font-weight-semibold);
    font-size: var(--p-typescale-sm);
  }
  details {
    all: unset;
    font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
    color: var(--p-color-primary);
    display: grid;
    grid-template: repeat(2, auto) / auto minmax(0, 1fr);
    column-gap: calc(11.2px * (0.64285714 - 0.64285714) + 4px);
    align-items: center;
    padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    background: var(--p-color-frosted);
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  details::details-content {
    display: contents !important;
    content-visibility: visible !important;
  }
  details > div {
    grid-area: 2/1/auto/-1;
    z-index: 0;
    display: grid;
    opacity: 0;
    margin-top: 0px;
    grid-template-rows: 0fr;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, .4s), grid-template-rows var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), margin-top var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  details[open] > div {
    opacity: 1;
    margin-top: calc(28px * (0.64285714 - 0.64285714) + 6px);
    grid-template-rows: 1fr;
    visibility: inherit;
    transition: visibility 0s linear 0s, grid-template-rows var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), margin-top var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  summary {
    all: unset;
    grid-area: 1/1/auto/-1;
    z-index: 1;
    display: grid;
    grid-template-columns: subgrid;
    align-items: center;
    cursor: pointer;
    padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    margin: calc(-1 * var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px))) calc(-1 * var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px)));
  }
  summary:focus-visible::before {
    outline: 2px solid var(--p-color-focus);
    outline-offset: 2px;
  }
  summary::before {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
    border-radius: var(--p-radius-full);
    background: transparent;
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  summary::after {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    background: var(--p-color-primary);
    transform: rotate3d(0);
    transition: transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  details[open] summary::after {
    transform: rotate3d(0,0,1,180deg);
  }
@media (forced-colors: active) {
    details {
      outline: 1px solid CanvasText;
      outline-offset: -1px;
      padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    }
    summary::after {
      background-color: LinkText;
    }
    summary::before {
      background-color: LinkText;
    }
    summary:focus-visible::before {
      outline-color: Highlight;
    }
}

@media(hover:hover) {
    summary:hover::before {
      background: var(--p-color-frosted);
    }
}
"
`;

exports[`getComponentCss() > should return correct css for alignMarker: start, background: frosted, isCompact: true, isOpen: true, isSticky: true, hasSummaryBefore: false, hasSummaryAfter: false, size: small 1`] = `
"@keyframes overflow-hidden {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}
  :host {
    display: block;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot[name="summary-before"], slot[name="summary"], slot[name="summary-after"] {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: calc(11.2px * (0.64285714 - 0.64285714) + 4px);
  }
  slot[name="summary-before"] {
    grid-area: 1/2;
    z-index: 2;
  }
  slot[name="summary"] {
    grid-area: 1/2;
  }
  slot[name="summary-after"] {
    grid-area: 1/3;
    z-index: 2;
  }
  slot:not([name]) {
    display: block;
    overflow: hidden;
  }
  details[open] slot:not([name]) {
    overflow: visible;
    animation: overflow-hidden var(--p-transition-duration,.4s);
  }
  h1,h2,h3,h4,h5,h6 {
    all: unset;
    grid-area: 1/2;
    font: inherit;
    font-weight: var(--p-font-weight-semibold);
    font-size: var(--p-typescale-sm);
  }
  details {
    all: unset;
    font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
    color: var(--p-color-primary);
    display: grid;
    grid-template: repeat(2, auto) / auto minmax(0, 1fr);
    column-gap: calc(11.2px * (0.64285714 - 0.64285714) + 4px);
    align-items: center;
    padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    background: var(--p-color-frosted);
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  details::details-content {
    display: contents !important;
    content-visibility: visible !important;
  }
  details > div {
    grid-area: 2/1/auto/-1;
    z-index: 0;
    display: grid;
    opacity: 0;
    margin-top: 0px;
    grid-template-rows: 0fr;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, .4s), grid-template-rows var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), margin-top var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  details[open] > div {
    opacity: 1;
    margin-top: calc(28px * (0.64285714 - 0.64285714) + 6px);
    grid-template-rows: 1fr;
    visibility: inherit;
    transition: visibility 0s linear 0s, grid-template-rows var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), margin-top var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  summary {
    all: unset;
    grid-area: 1/1/auto/-1;
    z-index: 1;
    display: grid;
    grid-template-columns: subgrid;
    align-items: center;
    cursor: pointer;
    padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    margin: calc(-1 * var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px))) calc(-1 * var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px)));
  }
  summary:focus-visible::before {
    outline: 2px solid var(--p-color-focus);
    outline-offset: 2px;
  }
  summary::before {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
    border-radius: var(--p-radius-full);
    background: transparent;
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  summary::after {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    background: var(--p-color-primary);
    transform: rotate3d(0);
    transition: transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  details[open] summary::after {
    transform: rotate3d(0,0,1,180deg);
  }
@media (forced-colors: active) {
    details {
      outline: 1px solid CanvasText;
      outline-offset: -1px;
      padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    }
    summary::after {
      background-color: LinkText;
    }
    summary::before {
      background-color: LinkText;
    }
    summary:focus-visible::before {
      outline-color: Highlight;
    }
}

@media(hover:hover) {
    summary:hover::before {
      background: var(--p-color-frosted);
    }
}
"
`;

exports[`getComponentCss() > should return correct css for alignMarker: start, background: frosted, isCompact: true, isOpen: true, isSticky: true, hasSummaryBefore: true, hasSummaryAfter: false, size: small 1`] = `
"@keyframes overflow-hidden {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}
  :host {
    display: block;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot[name="summary-before"], slot[name="summary"], slot[name="summary-after"] {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: calc(11.2px * (0.64285714 - 0.64285714) + 4px);
  }
  slot[name="summary-before"] {
    grid-area: 1/2;
    z-index: 2;
  }
  slot[name="summary"] {
    grid-area: 1/3;
  }
  slot[name="summary-after"] {
    grid-area: 1/4;
    z-index: 2;
  }
  slot:not([name]) {
    display: block;
    overflow: hidden;
  }
  details[open] slot:not([name]) {
    overflow: visible;
    animation: overflow-hidden var(--p-transition-duration,.4s);
  }
  h1,h2,h3,h4,h5,h6 {
    all: unset;
    grid-area: 1/3;
    font: inherit;
    font-weight: var(--p-font-weight-semibold);
    font-size: var(--p-typescale-sm);
  }
  details {
    all: unset;
    font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
    color: var(--p-color-primary);
    display: grid;
    grid-template: repeat(2, auto) / auto auto minmax(0, 1fr);
    column-gap: calc(11.2px * (0.64285714 - 0.64285714) + 4px);
    align-items: center;
    padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    background: var(--p-color-frosted);
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  details::details-content {
    display: contents !important;
    content-visibility: visible !important;
  }
  details > div {
    grid-area: 2/1/auto/-1;
    z-index: 0;
    display: grid;
    opacity: 0;
    margin-top: 0px;
    grid-template-rows: 0fr;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, .4s), grid-template-rows var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), margin-top var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  details[open] > div {
    opacity: 1;
    margin-top: calc(28px * (0.64285714 - 0.64285714) + 6px);
    grid-template-rows: 1fr;
    visibility: inherit;
    transition: visibility 0s linear 0s, grid-template-rows var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), margin-top var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  summary {
    all: unset;
    grid-area: 1/1/auto/-1;
    z-index: 1;
    display: grid;
    grid-template-columns: subgrid;
    align-items: center;
    cursor: pointer;
    padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    margin: calc(-1 * var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px))) calc(-1 * var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px)));
  }
  summary:focus-visible::before {
    outline: 2px solid var(--p-color-focus);
    outline-offset: 2px;
  }
  summary::before {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
    border-radius: var(--p-radius-full);
    background: transparent;
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  summary::after {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    background: var(--p-color-primary);
    transform: rotate3d(0);
    transition: transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  details[open] summary::after {
    transform: rotate3d(0,0,1,180deg);
  }
@media (forced-colors: active) {
    details {
      outline: 1px solid CanvasText;
      outline-offset: -1px;
      padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    }
    summary::after {
      background-color: LinkText;
    }
    summary::before {
      background-color: LinkText;
    }
    summary:focus-visible::before {
      outline-color: Highlight;
    }
}

@media(hover:hover) {
    summary:hover::before {
      background: var(--p-color-frosted);
    }
}
"
`;

exports[`getComponentCss() > should return correct css for alignMarker: start, background: frosted, isCompact: true, isOpen: true, isSticky: true, hasSummaryBefore: true, hasSummaryAfter: true, size: small 1`] = `
"@keyframes overflow-hidden {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}
  :host {
    display: block;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot[name="summary-before"], slot[name="summary"], slot[name="summary-after"] {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: calc(11.2px * (0.64285714 - 0.64285714) + 4px);
  }
  slot[name="summary-before"] {
    grid-area: 1/2;
    z-index: 2;
  }
  slot[name="summary"] {
    grid-area: 1/3;
  }
  slot[name="summary-after"] {
    grid-area: 1/4;
    z-index: 2;
  }
  slot:not([name]) {
    display: block;
    overflow: hidden;
  }
  details[open] slot:not([name]) {
    overflow: visible;
    animation: overflow-hidden var(--p-transition-duration,.4s);
  }
  h1,h2,h3,h4,h5,h6 {
    all: unset;
    grid-area: 1/3;
    font: inherit;
    font-weight: var(--p-font-weight-semibold);
    font-size: var(--p-typescale-sm);
  }
  details {
    all: unset;
    font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
    color: var(--p-color-primary);
    display: grid;
    grid-template: repeat(2, auto) / auto auto minmax(0, 1fr) auto ;
    column-gap: calc(11.2px * (0.64285714 - 0.64285714) + 4px);
    align-items: center;
    padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    background: var(--p-color-frosted);
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  details::details-content {
    display: contents !important;
    content-visibility: visible !important;
  }
  details > div {
    grid-area: 2/1/auto/-1;
    z-index: 0;
    display: grid;
    opacity: 0;
    margin-top: 0px;
    grid-template-rows: 0fr;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, .4s), grid-template-rows var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), margin-top var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  details[open] > div {
    opacity: 1;
    margin-top: calc(28px * (0.64285714 - 0.64285714) + 6px);
    grid-template-rows: 1fr;
    visibility: inherit;
    transition: visibility 0s linear 0s, grid-template-rows var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), margin-top var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  summary {
    all: unset;
    grid-area: 1/1/auto/-1;
    z-index: 1;
    display: grid;
    grid-template-columns: subgrid;
    align-items: center;
    cursor: pointer;
    padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    margin: calc(-1 * var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px))) calc(-1 * var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px)));
  }
  summary:focus-visible::before {
    outline: 2px solid var(--p-color-focus);
    outline-offset: 2px;
  }
  summary::before {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
    border-radius: var(--p-radius-full);
    background: transparent;
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  summary::after {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    background: var(--p-color-primary);
    transform: rotate3d(0);
    transition: transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  details[open] summary::after {
    transform: rotate3d(0,0,1,180deg);
  }
@media (forced-colors: active) {
    details {
      outline: 1px solid CanvasText;
      outline-offset: -1px;
      padding: var(--p-accordion-py, calc(28px * (0.64285714 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (0.64285714 - 0.64285714) + 12px));
    }
    summary::after {
      background-color: LinkText;
    }
    summary::before {
      background-color: LinkText;
    }
    summary:focus-visible::before {
      outline-color: Highlight;
    }
}

@media(hover:hover) {
    summary:hover::before {
      background: var(--p-color-frosted);
    }
}
"
`;

exports[`getComponentCss() > should return correct css for alignMarker: start, background: none, isCompact: false, isOpen: false, isSticky: false, hasSummaryBefore: false, hasSummaryAfter: false, size: small 1`] = `
"@keyframes overflow-hidden {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}
  :host {
    display: block;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot[name="summary-before"], slot[name="summary"], slot[name="summary-after"] {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: calc(11.2px * (1 - 0.64285714) + 4px);
  }
  slot[name="summary-before"] {
    grid-area: 1/2;
    z-index: 2;
  }
  slot[name="summary"] {
    grid-area: 1/2;
  }
  slot[name="summary-after"] {
    grid-area: 1/3;
    z-index: 2;
  }
  slot:not([name]) {
    display: block;
    overflow: hidden;
  }
  details[open] slot:not([name]) {
    overflow: visible;
    animation: overflow-hidden var(--p-transition-duration,.25s);
  }
  h1,h2,h3,h4,h5,h6 {
    all: unset;
    grid-area: 1/2;
    font: inherit;
    font-weight: var(--p-font-weight-semibold);
    font-size: var(--p-typescale-sm);
  }
  details {
    all: unset;
    font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
    color: var(--p-color-primary);
    display: grid;
    grid-template: repeat(2, auto) / auto minmax(0, 1fr);
    column-gap: calc(11.2px * (1 - 0.64285714) + 4px);
    align-items: center;
    padding: var(--p-accordion-py, 0) var(--p-accordion-px, 0);
    background: transparent;
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  details::details-content {
    display: contents !important;
    content-visibility: visible !important;
  }
  details > div {
    grid-area: 2/1/auto/-1;
    z-index: 0;
    display: grid;
    opacity: 0;
    margin-top: 0px;
    grid-template-rows: 0fr;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, .25s), grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), margin-top var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  details[open] > div {
    opacity: 1;
    margin-top: calc(28px * (1 - 0.64285714) + 6px);
    grid-template-rows: 1fr;
    visibility: inherit;
    transition: visibility 0s linear 0s, grid-template-rows var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), margin-top var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  summary {
    all: unset;
    grid-area: 1/1/auto/-1;
    z-index: 1;
    display: grid;
    grid-template-columns: subgrid;
    align-items: center;
    cursor: pointer;
    padding: var(--p-accordion-py, 0) var(--p-accordion-px, 0);
    margin: calc(-1 * var(--p-accordion-py, 0)) calc(-1 * var(--p-accordion-px, 0));
  }
  summary:focus-visible::before {
    outline: 2px solid var(--p-color-focus);
    outline-offset: 2px;
  }
  summary::before {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
    border-radius: var(--p-radius-full);
    background: transparent;
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  summary::after {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    background: var(--p-color-primary);
    transform: rotate3d(0);
    transition: transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  }
  details[open] summary::after {
    transform: rotate3d(0,0,1,180deg);
  }
@media (forced-colors: active) {
    details {
      outline: 1px solid CanvasText;
      outline-offset: 0;
      padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    }
    summary::after {
      background-color: LinkText;
    }
    summary::before {
      background-color: LinkText;
    }
    summary:focus-visible::before {
      outline-color: Highlight;
    }
}

@media(hover:hover) {
    summary:hover::before {
      background: var(--p-color-frosted);
    }
}
"
`;

exports[`getComponentCss() > should return correct css for alignMarker: start, background: surface, isCompact: false, isOpen: true, isSticky: true, hasSummaryBefore: false, hasSummaryAfter: false, size: small 1`] = `
"@keyframes overflow-hidden {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}
  :host {
    display: block;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot[name="summary-before"], slot[name="summary"], slot[name="summary-after"] {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: calc(11.2px * (1 - 0.64285714) + 4px);
  }
  slot[name="summary-before"] {
    grid-area: 1/2;
    z-index: 2;
  }
  slot[name="summary"] {
    grid-area: 1/2;
  }
  slot[name="summary-after"] {
    grid-area: 1/3;
    z-index: 2;
  }
  slot:not([name]) {
    display: block;
    overflow: hidden;
  }
  details[open] slot:not([name]) {
    overflow: visible;
    animation: overflow-hidden var(--p-transition-duration,.4s);
  }
  h1,h2,h3,h4,h5,h6 {
    all: unset;
    grid-area: 1/2;
    font: inherit;
    font-weight: var(--p-font-weight-semibold);
    font-size: var(--p-typescale-sm);
  }
  details {
    all: unset;
    font: var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
    color: var(--p-color-primary);
    display: grid;
    grid-template: repeat(2, auto) / auto minmax(0, 1fr);
    column-gap: calc(11.2px * (1 - 0.64285714) + 4px);
    align-items: center;
    padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    background: var(--p-color-surface);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  details::details-content {
    display: contents !important;
    content-visibility: visible !important;
  }
  details > div {
    grid-area: 2/1/auto/-1;
    z-index: 0;
    display: grid;
    opacity: 0;
    margin-top: 0px;
    grid-template-rows: 0fr;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, .4s), grid-template-rows var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), margin-top var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  details[open] > div {
    opacity: 1;
    margin-top: calc(28px * (1 - 0.64285714) + 6px);
    grid-template-rows: 1fr;
    visibility: inherit;
    transition: visibility 0s linear 0s, grid-template-rows var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), margin-top var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  summary {
    all: unset;
    grid-area: 1/1/auto/-1;
    z-index: 1;
    display: grid;
    grid-template-columns: subgrid;
    align-items: center;
    cursor: pointer;
    padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    margin: calc(-1 * var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px))) calc(-1 * var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px)));
    position: sticky;
    top: var(--p-accordion-summary-top, var(--p-accordion-position-sticky-top, 0px));
    background: linear-gradient(180deg,var(--p-color-surface) 0%,var(--p-color-surface) 90%,transparent 100%);
    border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  }
  summary:focus-visible::before {
    outline: 2px solid var(--p-color-focus);
    outline-offset: 2px;
  }
  summary::before {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
    border-radius: var(--p-radius-full);
    background: transparent;
    transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  summary::after {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m12 15.125h-.001l-.005-.006-6.494-5.476.642-.768 5.858 4.94 5.858-4.94.642.769-6.497 5.477z"/></svg>') center/contain no-repeat;
    background: var(--p-color-primary);
    transform: rotate3d(0);
    transition: transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  }
  details[open] summary::after {
    transform: rotate3d(0,0,1,180deg);
  }
@media (forced-colors: active) {
    details {
      outline: 1px solid CanvasText;
      outline-offset: -1px;
      padding: var(--p-accordion-py, calc(28px * (1 - 0.64285714) + 6px)) var(--p-accordion-px, calc(11.2px * (1 - 0.64285714) + 12px));
    }
    summary::after {
      background-color: LinkText;
    }
    summary::before {
      background-color: LinkText;
    }
    summary:focus-visible::before {
      outline-color: Highlight;
    }
}

@media(hover:hover) {
    summary:hover::before {
      background: var(--p-color-frosted);
    }
}
"
`;
